encapsulate the util.

--- a/rectangle.html
+++ b/rectangle.html
@@ -36,8 +36,7 @@
     </script>
 
     <script>
-        var c = document.getElementById('c'),
-            gl = c.getContext('experimental-webgl');
+        var glu = GLU('c'), gl = glu.gl();
 
         //gl.clearColor(0.0, 0.0, 0.6, 1.0);
         //gl.clear(gl.COLOR_BUFFER_BIT);
@@ -60,7 +59,7 @@
         // -1.0 <= x <= 1.0
         // -1.0 <= y <= 1.0
         // -1.0 <= z <= 1.0
-        vertexPosBuffer = createBuffer(vertices);
+        vertexPosBuffer = glu.createBuffer(vertices);
 
         var vs, fs, program,
             offset = [1.0, 1.0, 0.0];
@@ -70,7 +69,7 @@
         fs = document.getElementById('shader-fs').textContent;
 
         // program
-        program = createProgram(vs, fs);
+        program = glu.createProgram(vs, fs);
         gl.useProgram(program);
 
         /* note: (http://stackoverflow.com/questions/3665671/is-vertexattribpointer-needed-after-each-bindbuffer)
