--- a/rectangleX.html
+++ b/rectangleX.html
@@ -37,8 +37,7 @@
     </script>
 
     <script>
-        var c = document.getElementById('c'),
-            gl = c.getContext('experimental-webgl');
+        var glu = GLU('c'), gl = glu.gl();
 
         // buffer
         var vertexPosBuffer, vertices,
@@ -59,7 +58,7 @@
         // -1.0 <= x <= 1.0
         // -1.0 <= y <= 1.0
         // -1.0 <= z <= 1.0
-        vertexPosBuffer = createBuffer(vertices);
+        vertexPosBuffer = glu.createBuffer(vertices);
 
         // r,g,b
         verticesColor = [
@@ -68,7 +67,7 @@
             0.0, 0.0, 1.0,
             0.0, 0.0, 0.0
         ];
-        vertexColorBuffer = createBuffer(verticesColor);
+        vertexColorBuffer = glu.createBuffer(verticesColor);
 
         var vs, fs, program;
 
@@ -77,7 +76,7 @@
         fs = document.getElementById('shader-fs').textContent;
 
         // program
-        program = createProgram(vs, fs);
+        program = glu.createProgram(vs, fs);
         gl.useProgram(program);
 
         /* note: (http://stackoverflow.com/questions/3665671/is-vertexattribpointer-needed-after-each-bindbuffer)
