--- a/texture.html
+++ b/texture.html
@@ -86,9 +86,7 @@
 
         var texture, img;
 
-        // step1. 创建texture
-        texture = gl.createTexture();
-        // step2. 加载图片
+        // 加载图片
         img = new Image();
         img.onload = function () {
             // 用bind的buffer,向shader传递attribute数据(点位置)
@@ -105,34 +103,15 @@
 
             // 向shader传递uniform数据
             program.samplerUniform = gl.getUniformLocation(program, 'uSampler');
-			gl.uniform1i(program.samplerUniform, 0);
+			      gl.uniform1i(program.samplerUniform, 0);
 
-            // step3. 激活texture,绑定texture
-			gl.activeTexture(gl.TEXTURE0);
-			gl.bindTexture(gl.TEXTURE_2D, texture);
-
-            // step4. 设置texture的像素数据的对齐方式(align type of pixel data in byte order) 
-			gl.pixelStorei(gl.UNPACK_FLIP_Y_WEBGL, true);
-
-            // step5. 设置texture参数
-			gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MAG_FILTER, gl.LINEAR);
-			gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MIN_FILTER, gl.LINEAR);
-			gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_WRAP_S, gl.REPEAT);
-			gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_WRAP_T, gl.REPEAT);
-
-			// gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MAG_FILTER, gl.LINEAR);
-			// gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MIN_FILTER, gl.LINEAR);
-			// gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_WRAP_S, gl.CLAMP_TO_EDGE);
-			// gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_WRAP_T, gl.CLAMP_TO_EDGE);
-
-            // step5. 传送texture到显存(upload texture to video memory)
-			gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, gl.RGBA, gl.UNSIGNED_BYTE, img);
-
-            // step6. 解绑
-            gl.bindTexture(gl.TEXTURE0, null);
+            // 生成texture,激活,绑定
+            texture = glu.createTexture(img);
+            gl.activeTexture(gl.TEXTURE0);
+            gl.bindTexture(gl.TEXTURE_2D, texture);
 
             // draw
-			gl.drawArrays(gl.TRIANGLE_STRIP, 0, 4);
+			      gl.drawArrays(gl.TRIANGLE_STRIP, 0, 4);
 
             img.onload = null;
         };
